update (input): blur with useOutsideClick when having floating label

--- a/app/number-input/page.mdx
+++ b/app/number-input/page.mdx
@@ -34,27 +34,33 @@ import { CircleDollarSign } from 'lucide-react';
 
 ## Floating label
 
-<DemoNumberInput isClearable floatingLabel='Floating Label' placeholder='Placeholder'  stepper="chevron"/>
-<DemoNumberInput isClearable floatingLabel='Floating Label' placeholder='Placeholder'  leftIcon={<CircleDollarSign />} />
+<DemoNumberInput isClearable floatingLabel='Enter Number' placeholder='Placeholder'  stepper="chevron"/>
+<DemoNumberInput isClearable floatingLabel='Enter Number' placeholder='Placeholder'  leftIcon={<CircleDollarSign />} />
+
+<DemoNumberInput floatingLabel='Enter Number' placeholder='Placeholder' unit="USD" />
+<DemoNumberInput floatingLabel='Enter Number' placeholder='Placeholder' unit={["USD", "VND", "EUR", "JPY"]} />
+
 <DemoNumberInput
   isClearable
   isError={true}
   errorMessage='Error message'
-  floatingLabel='Floating Label'
+  floatingLabel='Enter Number'
   placeholder='Placeholder'
 />
 <DemoNumberInput
   isClearable
   isError={true}
   errorMessage='Error message'
-  floatingLabel='Floating Label'
+  floatingLabel='Enter Number'
   placeholder='Placeholder'
   leftIcon={<CircleDollarSign />}
 />
-<DemoNumberInput isClearable disabled floatingLabel='Floating Label' placeholder='Placeholder' value={1000} />
-<DemoNumberInput isClearable disabled floatingLabel='Floating Label' placeholder='Placeholder' leftIcon={<CircleDollarSign />}/>
-<DemoNumberInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' value={1000} />
-<DemoNumberInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' leftIcon={<CircleDollarSign />}/>
+<DemoNumberInput isClearable disabled floatingLabel='Enter Number' placeholder='Placeholder' value={1000} />
+<DemoNumberInput isClearable disabled floatingLabel='Enter Number' placeholder='Placeholder' leftIcon={<CircleDollarSign />}/>
+<DemoNumberInput isClearable readOnly floatingLabel='Enter Number' placeholder='Placeholder' value={1000} />
+<DemoNumberInput isClearable readOnly floatingLabel='Enter Number' placeholder='Placeholder' leftIcon={<CircleDollarSign />}/>
+
+
 
 {/* /////////////////////////////////////////////////////////////////////////////////////// */}
 ## Size Medium
@@ -99,27 +105,31 @@ import { CircleDollarSign } from 'lucide-react';
 
 ## Floating label
 
-<DemoNumberInput isClearable floatingLabel='Floating Label' placeholder='Placeholder' theme="alternative"/>
-<DemoNumberInput isClearable floatingLabel='Floating Label' placeholder='Placeholder'  leftIcon={<CircleDollarSign />} theme="alternative"/>
+<DemoNumberInput isClearable floatingLabel='Enter Number' placeholder='Placeholder' theme="alternative"/>
+<DemoNumberInput isClearable floatingLabel='Enter Number' placeholder='Placeholder'  leftIcon={<CircleDollarSign />} theme="alternative"/>
+
+<DemoNumberInput floatingLabel='Enter Number' placeholder='Placeholder' unit="USD" theme="alternative"/>
+<DemoNumberInput floatingLabel='Enter Number' placeholder='Placeholder' unit={["USD", "VND", "EUR", "JPY"]} theme="alternative"/>
+
 <DemoNumberInput
   isClearable
   isError={true}
   errorMessage='Error message'
-  floatingLabel='Floating Label'
+  floatingLabel='Enter Number'
   placeholder='Placeholder' theme="alternative"
 />
 <DemoNumberInput
   isClearable
   isError={true}
   errorMessage='Error message'
-  floatingLabel='Floating Label'
+  floatingLabel='Enter Number'
   placeholder='Placeholder' 
   leftIcon={<CircleDollarSign />} theme="alternative"
 />
-<DemoNumberInput isClearable disabled floatingLabel='Floating Label' placeholder='Placeholder' value={1000} theme="alternative"/>
-<DemoNumberInput isClearable disabled floatingLabel='Floating Label' placeholder='Placeholder' value={1000} leftIcon={<CircleDollarSign />} theme="alternative"/>
-<DemoNumberInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' value={1000} />
-<DemoNumberInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' value={1000} leftIcon={<CircleDollarSign />} theme="alternative"/>
+<DemoNumberInput isClearable disabled floatingLabel='Enter Number' placeholder='Placeholder' value={1000} theme="alternative"/>
+<DemoNumberInput isClearable disabled floatingLabel='Enter Number' placeholder='Placeholder' value={1000} leftIcon={<CircleDollarSign />} theme="alternative"/>
+<DemoNumberInput isClearable readOnly floatingLabel='Enter Number' placeholder='Placeholder' value={1000} />
+<DemoNumberInput isClearable readOnly floatingLabel='Enter Number' placeholder='Placeholder' value={1000} leftIcon={<CircleDollarSign />} theme="alternative"/>
 
 </div>
 
@@ -163,26 +173,26 @@ import { CircleDollarSign } from 'lucide-react';
 
 ## Floating label
 
-<DemoNumberInput isClearable floatingLabel='Floating Label' placeholder='Placeholder'  stepper="chevron"/>
-<DemoNumberInput isClearable floatingLabel='Floating Label' placeholder='Placeholder'  leftIcon={<CircleDollarSign />} />
+<DemoNumberInput isClearable floatingLabel='Enter Number' placeholder='Placeholder'  stepper="chevron"/>
+<DemoNumberInput isClearable floatingLabel='Enter Number' placeholder='Placeholder'  leftIcon={<CircleDollarSign />} />
 <DemoNumberInput
   isClearable
   isError={true}
   errorMessage='Error message'
-  floatingLabel='Floating Label'
+  floatingLabel='Enter Number'
   placeholder='Placeholder'
 />
 <DemoNumberInput
   isClearable
   isError={true}
   errorMessage='Error message'
-  floatingLabel='Floating Label'
+  floatingLabel='Enter Number'
   placeholder='Placeholder'
   leftIcon={<CircleDollarSign />}
 />
-<DemoNumberInput isClearable disabled floatingLabel='Floating Label' placeholder='Placeholder' value={1000} />
-<DemoNumberInput isClearable disabled floatingLabel='Floating Label' placeholder='Placeholder' leftIcon={<CircleDollarSign />}/>
-<DemoNumberInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' value={1000} />
-<DemoNumberInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' leftIcon={<CircleDollarSign />}/>
+<DemoNumberInput isClearable disabled floatingLabel='Enter Number' placeholder='Placeholder' value={1000} />
+<DemoNumberInput isClearable disabled floatingLabel='Enter Number' placeholder='Placeholder' leftIcon={<CircleDollarSign />}/>
+<DemoNumberInput isClearable readOnly floatingLabel='Enter Number' placeholder='Placeholder' value={1000} />
+<DemoNumberInput isClearable readOnly floatingLabel='Enter Number' placeholder='Placeholder' leftIcon={<CircleDollarSign />}/>
 
 </div> */}
