--- a/app/number-input/page.mdx
+++ b/app/number-input/page.mdx
@@ -25,9 +25,12 @@ import { CircleDollarSign } from 'lucide-react';
 
 <DemoNumberInput isError={true} errorMessage='Error message' placeholder='Placeholder'  stepper="auto"/>
 <DemoNumberInput isError={true} errorMessage='Error message' placeholder='Placeholder' unit="$"/>
+<DemoNumberInput isError={true} errorMessage='Error message' placeholder='Placeholder' leftIcon={<CircleDollarSign />} stepControl={10} stepper="chevron"/>
 <DemoNumberInput isError={true} errorMessage='Error message' placeholder='Placeholder' leftIcon={<CircleDollarSign />} />
 <DemoNumberInput disabled stepper="auto" />
 <DemoNumberInput disabled leftIcon={<CircleDollarSign />} />
+<DemoNumberInput disabled placeholder='Placeholder' leftIcon={<CircleDollarSign />} stepControl={10} stepper="chevron"/>
+<DemoNumberInput disabled placeholder='Placeholder' leftIcon={<CircleDollarSign />} />
 <DemoNumberInput readOnly value={1000} placeholder='Placeholder' unit="$"/>
 <DemoNumberInput readOnly value={1000} placeholder='Placeholder' stepper="separate"/>
 <DemoNumberInput readOnly value={1000} placeholder='Placeholder' leftIcon={<CircleDollarSign />} stepper="chevron"/>
@@ -92,6 +95,7 @@ import { CircleDollarSign } from 'lucide-react';
 
 <DemoNumberInput isClearable placeholder='Placeholder' theme="alternative"/>
 <DemoNumberInput isClearable placeholder='Placeholder' leftIcon={<CircleDollarSign />} theme="alternative"/>
+<DemoNumberInput isClearable placeholder='Placeholder' leftIcon={<CircleDollarSign />} stepControl={10} stepper="chevron" theme="alternative"/>
 
 ## States
 
