--- a/app/badge/@spec/page.mdx
+++ b/app/badge/@spec/page.mdx
@@ -1,4 +1,9 @@
 
+import Badge from '@libComponents/Badge';
+import Image from '@components/showcase/ImageSection';
+import Component from '@components/showcase/ComponentSection';
+import imageSrc from '@public/images/badge';
+
 :::callout[note]
 A component used to communicate status, count, or category with compact visual emphasis.
 :::
@@ -27,6 +32,9 @@ A component used to communicate status, count, or category with compact visual e
 - **Icon**: An optional visual element that represents the badge’s status, count, or category.
 - **Dot**: An optional visual element that can indicate a live status or activity. It is the [[Dot]] component.
 
+<Image src={imageSrc.anatomy.src} alt='anatomy' />
+<Image src={imageSrc.anatomyDot.src} alt='anatomy-dot' />
+
 ## States
 
 This component does not have states.
@@ -39,21 +47,37 @@ This component does not have states.
 - **Outlined**: Medium visual emphasis with a border and a light color fill.
 - **Glass**: Medium-low emphasis with a translucent, frosted appearance.
 
+<Image src={imageSrc.kind.src} alt='kind' />
+
 ##### Color
 
 - Standard semantic colors (e.g., inactive, affirmative, cautionary, adverse, informative) and expanded colors from the design system palette are available to represent various statuses or categories.
+
+<Image src={imageSrc.color.src} alt='color' />
+<Image src={imageSrc.color2.src} alt='color2' />
+
 
 ##### Size
 
 - Badge sizes vary in height, padding, and icon/dot size to ensure visual harmony across small, medium, and large badges.
 
+<Image src={imageSrc.sizeSmall.src} alt='sizeSmall' />
+<Image src={imageSrc.sizeMedium.src} alt='sizeMedium' />
+<Image src={imageSrc.sizeLarge.src} alt='sizeLarge' />
+
+
 ##### Icon
 
 - An icon can be optionally added next to the badge label to provide additional visual context.
 
+<Image src={imageSrc.icon.src} alt='icon' />
+
+
 ##### Dot
 
 - A Dot component can be added next to the badge label to indicate a live status or activity.
+
+<Image src={imageSrc.dot.src} alt='dot' />
 
 ## Behaviors
 
@@ -61,6 +85,10 @@ This component does not have states.
 
 - A badge’s minimum width is set equal to its height, ensuring a circular shape when the content is minimal (e.g., single-digit numbers).
 
+<Image src={imageSrc.minWidth.src} alt='minWidth' />
+
 ##### Text overflow
 
 - When the badge label exceeds the available horizontal space, it is truncated with an ellipsis to maintain visual integrity.
+
+<Image src={imageSrc.overflow.src} alt='overflow' />
