doc: update badge, button images

--- a/app/badge/@spec/page.mdx
+++ b/app/badge/@spec/page.mdx
@@ -8,6 +8,8 @@ import imageSrc from '@public/images/badge';
 A component used to communicate status, count, or category with compact visual emphasis.
 :::
 
+<Image src={imageSrc.badge.src} alt='badge' />
+
 ## Design checklist
 
 | Status | Item                                 | Description                                                                                                                                                                                                                       |
