--- a/app/menu/@spec/page.mdx
+++ b/app/menu/@spec/page.mdx
@@ -1,8 +1,14 @@
+import Badge from '@libComponents/Badge';
+import Image from '@components/showcase/ImageSection';
+import Component from '@components/showcase/ComponentSection';
+import imageSrc from '@public/images/menu';
+import * as Demo from "../@dev/demo-components"
 
 :::callout[note]
 A interactive popover interface that contains a list of options or other input controls, used in conjunction with select fields and action buttons.
 :::
 
+<Image src={imageSrc.menu.src} alt='menu' />
 
 ## Design checklist
 
@@ -31,6 +37,9 @@ A interactive popover interface that contains a list of options or other input c
 - **Scroll buttons**: A set of buttons that allows the user to scroll up or down through a list of menu items.
 - **Filter input**: An optional search input field that allows the user to filter menu items.
 
+<Image src={imageSrc.anatomy.src} alt='anatomy' />
+<Image src={imageSrc.anatomy2.src} alt='anatomy2' />
+
 ### Menu item
 
 - **Container**: The outermost encompassing element.
@@ -40,6 +49,8 @@ A interactive popover interface that contains a list of options or other input c
 - **Checkmark**: A visual indicator that shows the selection state of the menu item.
 - **Checkbox**: An alternative visual indicator that shows the selection state of the menu item.
 - **Radio**: An alternative visual indicator that shows the selection state of the menu item.
+
+<Image src={imageSrc.anatomy3.src} alt='anatomy3' />
 
 ## States
 
@@ -51,9 +62,13 @@ A interactive popover interface that contains a list of options or other input c
 
 - The menu is not visible within the user interface and does not take up space.
 
+<Image src={imageSrc.hidden.src} alt='hidden' />
+
 ##### Visible
 
 - The menu is presented to the user to allow for interaction.
+
+<Image src={imageSrc.visible.src} alt='visible' />
 
 ### Menu item
 
@@ -63,17 +78,25 @@ A interactive popover interface that contains a list of options or other input c
 
 - Interaction with the menu item is available.
 
+<Image src={imageSrc.enabled.src} alt='enabled' />
+
 ##### Hovered
 
 - The cursor is currently positioned over the menu item, indicated by a different color shade and the pointer cursor.
+
+<Image src={imageSrc.hovered.src} alt='hovered' />
 
 ##### Focused
 
 - The menu item is focused via keyboard interaction, indicated by a ring outline.
 
+<Image src={imageSrc.focused.src} alt='focused' />
+
 ##### Disabled
 
 - Interaction with the menu item is disallowed, indicated by a muted appearance and the disallowed cursor.
+
+<Image src={imageSrc.disabled.src} alt='disabled' />
 
 #### Value states
 
@@ -81,13 +104,22 @@ A interactive popover interface that contains a list of options or other input c
 
 - The menu item is not currently selected, indicated by the lack of selection checkmark or an unchecked checkbox or radio input.
 
+<Image src={imageSrc.unselected.src} alt='unselected' />
+
 ##### Selected
 
 - The menu item is currently selected, indicated by a selection checkmark or a checked checkbox or radio input.
 
+<Image src={imageSrc.selectedSubtle.src} alt='selectedSubtle' />
+<Image src={imageSrc.selectedSubtleHovered.src} alt='selectedSubtleHovered' />
+<Image src={imageSrc.selectedPronounced.src} alt='selectedPronounced' />
+<Image src={imageSrc.selectedPronouncedHovered.src} alt='selectedPronouncedHovered' />
+
 ### Filter input
 
 This sub-component has the same states as [[Search input]].
+
+<Image src={imageSrc.filterInput.src} alt='filterInput' />
 
 ## Options
 
@@ -97,57 +129,94 @@ Options applied to a menu affect all of its menu items.
 
 - Menus are available in default or alternative [[Layering]].
 
+<Image src={imageSrc.defaultLayer.src} alt='defaultLayer' />
+
+<Image src={imageSrc.alternative.src} alt='alternative' />
+
 ##### Grouping
 
 - Menu items can be grouped together.
 - Menu groups are separated by dividers.
 - A label can be optionally added to a menu group.
 
+<Image src={imageSrc.groupLabelOn.src} alt='groupLabelOn' />
+
+<Image src={imageSrc.groupLabelOff.src} alt='groupLabelOff' />
+
 ##### Scroll buttons
 
 - For menus where the number of menu items exceeds the available space, by default, scroll buttons are shown at the top and/or bottom of the menu to indicate that there are more items to view in the respective direction.
 - The user may scroll through the menu items by clicking the scroll buttons.
+
+<Image src={imageSrc.scrollButton.src} alt='scrollButton' />
 
 ##### Checkmark side
 
 - Selection checkmarks can be positioned to the left or right of menu item labels.
 - Left-side checkmarks are incompatible with icons.
 
+<Image src={imageSrc.leftsideCheckmark.src} alt='leftsideCheckmark' />
+<Image src={imageSrc.rightsideCheckmark.src} alt='rightsideCheckmark' />
+
 ##### Checkbox input
 
 - Selection checkmarks can be replaced by checkbox inputs, suitable for use with multiple-choice select fields.
+
+<Image src={imageSrc.checkboxInput.src} alt='checkboxInput' />
 
 ##### Radio input
 
 - Selection checkmarks can be replaced by radio inputs, suitable for use with single-choice select fields.
 
+<Image src={imageSrc.radioInput.src} alt='radioInput' />
+
 ##### Sublabel
 
 - A sublabel can be optionally added below the menu item label to provide additional context.
+
+<Image src={imageSrc.sublabel.src} alt='sublabel' />
 
 ##### Color
 
 - Menu items are neutral-colored or achromatic by default.
 - An accent color can be chosen via theme configuration and applied to menu items for enhanced visual emphasis.
 
+<Image src={imageSrc.neutral.src} alt='neutral' />
+
+<Image src={imageSrc.accent.src} alt='accent' />
+
 ##### Selection prominence
 
 - **Subtle**: The background color of selected menu items has a low level of contrast in comparison to unselected menu items.
 - **Pronounced**: The background color of selected menu items has a high level of contrast in comparison to unselected menu items.
+
+<Image src={imageSrc.subtle.src} alt='subtle' />
+
+<Image src={imageSrc.pronounced.src} alt='pronounced' />
 
 ##### Size
 
 - Small and medium menu items differ in container height.
 - Medium is the default menu item size.
 
+<Image src={imageSrc.small.src} alt='small' />
+
+<Image src={imageSrc.medium.src} alt='medium' />
+
 ##### Icon
 
 - An icon can be optionally added to the left of the menu item label.
+
+<Image src={imageSrc.icon.src} alt='icon' />
 
 ##### Filter input
 
 - A filter input can be optionally added to the top of the menu to allow the user to filter for menu item labels that match the search query.
 - A message is displayed when no matching menu items are found.
+
+<Image src={imageSrc.filterInput.src} alt='filter input' />
+
+<Image src={imageSrc.filterInput2.src} alt='filter input' />
 
 ## Behaviors
 
@@ -155,11 +224,18 @@ Options applied to a menu affect all of its menu items.
 
 - The start position of all menu item labels are always aligned.
 
+<Image src={imageSrc.labelAlignment.src} alt='labelAlignment' />
+
 ##### Text overflow
 
 - When the menu item label is too long for the horizontal space available, it is truncated with an ellipsis.
+
+<Image src={imageSrc.textOverflow.src} alt='textOverflow' />
 
 ##### Menu positioning
 
 - Menus are positioned below the select field or action button that triggers them.
 - If the menu would extend beyond the viewport, it is repositioned above the trigger element.
+
+<Image src={imageSrc.position.src} alt='position' />
+<Image src={imageSrc.position2.src} alt='position2' />
