chore: clean redundant dependencies

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,5 +1,19 @@
 # Changelog
 
+## Version 0.1.5:
+
+- New feature: 
+    - Inline Link: core features with tokens
+    - Breadcrumb: core features with tokens
+    - Tooltip: core features with tokens
+    - Search Input: core features with tokens
+    - Email Input: core features with tokens
+    - Textarea: core features with tokens
+- Change:
+    - Available components: add new components
+- Fix:
+    - Optimize input components
+
 ## Version 0.1.4:
 
 - New feature: 
