--- a/app/select/@spec/page.mdx
+++ b/app/select/@spec/page.mdx
@@ -1,6 +1,14 @@
+import Badge from '@libComponents/Badge';
+import Image from '@components/showcase/ImageSection';
+import Component from '@components/showcase/ComponentSection';
+import imageSrc from '@public/images/select';
+import * as Demo from "../@dev/demo-components"
+
 :::callout[note]
 A selection field that allows users to choose a single option or multiple options from a dropdown menu.
 :::
+
+<Image src={imageSrc.select.src} alt='select' />
 
 ## Design checklist
 
@@ -31,14 +39,20 @@ A selection field that allows users to choose a single option or multiple option
 - **Chevron**: An optional visual element that indicates the display state of a dropdown menu.
 - **Dropdown menu**: The interactive popover interface where the user are presented with options to select from. It is the [[Menu]] component.
 
+<Image src={imageSrc.anatomy.src} alt='anatomy' />
+
 ### Floating label
 
 - **Floating label**: An optional text label that transitions from an in-field placeholder to a label above the field when focused or filled.
+
+<Image src={imageSrc.anatomy2.src} alt='anatomy2' />
 
 ### Multiple selection
 
 - **Selected option tag**: An element which represents the selected option. It is the [[Tag]] component.
 - **Count badge**: An badge which indicates the number of selected options.
+
+<Image src={imageSrc.anatomy3.src} alt='anatomy3' />
 
 ## States
 
@@ -50,13 +64,26 @@ A selection field that allows users to choose a single option or multiple option
 
 - Interaction with the select field is available.
 
+<Image src={imageSrc.enabled.src} alt='enabled' />
+
+<Image src={imageSrc.enabled2.src} alt='enabled2' />
+
+
 ##### Hovered
 
 - The cursor is currently positioned over the select field, indicated by the text cursor and a slightly different border color.
 
+<Image src={imageSrc.hovered.src} alt='hovered' />
+
+<Image src={imageSrc.hovered2.src} alt='hovered2' />
+
 ##### Focused
 
 - The select field is focused via keyboard or mouse interaction, indicated by a thickened border.
+
+<Image src={imageSrc.focused.src} alt='focused' />
+
+<Image src={imageSrc.focused2.src} alt='focused2' />
 
 ##### Read-only
 
@@ -64,9 +91,17 @@ A selection field that allows users to choose a single option or multiple option
 
 > [!missing] Missing specification for multi-select
 
+<Image src={imageSrc.readonly.src} alt='readonly' />
+
+<Image src={imageSrc.readonly2.src} alt='readonly2' />
+
 ##### Disabled
 
 - Interaction with the input field is disallowed, indicated by a muted appearance.
+
+<Image src={imageSrc.disabled.src} alt='disabled' />
+
+<Image src={imageSrc.disabled2.src} alt='disabled2' />
 
 #### Value states
 
@@ -74,25 +109,44 @@ A selection field that allows users to choose a single option or multiple option
 
 - The field does not contain any input value.
 
+<Image src={imageSrc.unselected.src} alt='unselected' />
+
+<Image src={imageSrc.unselected2.src} alt='unselected2' />
+
 ##### Selected
 
 - The field contains some input value.
+
+<Image src={imageSrc.selected.src} alt='selected' />
+
+<Image src={imageSrc.selected2.src} alt='selected2' />
 
 ##### Invalid
 
 - The input value does not meet specified criteria, indicated by a red border color and an error message.
 
+<Image src={imageSrc.invalid.src} alt='invalid' />
+
+<Image src={imageSrc.invalid2.src} alt='invalid2' />
+
 ### Dropdown menu
 
 This sub-component has the same states as [[Menu]].
+
+<Image src={imageSrc.dropdownMenu.src} alt='dropdownMenu' />
 
 ### Clear button
 
 This sub-component has the same states as [[Button]].
 
+
+<Image src={imageSrc.clearButton.src} alt='clearButton' />
+
 ### Selected option tag
 
 This sub-component has the same states as [[Tag]].
+
+<Image src={imageSrc.selectOptionTag.src} alt='selectOptionTag' />
 
 ## Options
 
@@ -103,10 +157,18 @@ This sub-component has the same states as [[Tag]].
 - Selects are available in default or alternative [[Layering]].
 - The Layering option chosen also affects the dropdown menu.
 
+<Image src={imageSrc.defaultLayer.src} alt='defaultLayer' />
+
+<Image src={imageSrc.alternative.src} alt='alternative' />
+
 ##### Size
 
 - Selects are available in small and medium sizes that differ in field height.
 - Medium is the default select size.
+
+<Image src={imageSrc.small.src} alt='small' />
+
+<Image src={imageSrc.medium.src} alt='medium' />
 
 ##### Floating label
 
@@ -114,31 +176,45 @@ This sub-component has the same states as [[Tag]].
 - The label is maximized within the middle of the field in the unselected state and the select field has not received focus.
 - The label is minimized and floats towards the top when the select field receives focus.
 
+<Image src={imageSrc.floatingLabel.src} alt='floatingLabel' />
+
 ##### Placeholder
 
 - A placeholder text can be optionally displayed for the purpose of providing the user a selection hint.
+
+<Image src={imageSrc.placeholder.src} alt='placeholder' />
 
 ##### Clear button
 
 - A clear button can be added to the select field to allow quick clearing of the entered value when clicked.
 
+<Image src={imageSrc.clearButtonOption.src} alt='clearButtonOption' />
+
 ##### Icon
 
 - An icon can be optionally added to the leftmost position within the select field.
+
+<Image src={imageSrc.icon.src} alt='icon' />
 
 ##### Multiple selection
 
 - Selects can be optionally configured to allow multiple selections.
 - Selected options are displayed as tags within the select field.
 
+<Image src={imageSrc.multipleSelection.src} alt='multipleSelection' />
+
 ### Dropdown menu options
 
 The dropdown menu sub-component inherits all available options of the [[Menu#Options|Menu]] component.
+
+<Image src={imageSrc.dropdownMenuOption.src} alt='dropdownMenuOption' />
 
 ## Behaviors
 
 ##### Tags overflow
 
 - When there is insufficient space to display all tags of a multiple selection select, tags are replaced with a count badge indicating the number of options currently selected.
+
+<Image src={imageSrc.tagOverflow.src} alt='tagOverflow' />
 
 > [!missing] Section is incomplete
